= natour Changelog

All notable changes to this project will be documented in this file.

The format is based on https://keepachangelog.com/en/1.0.0/[Keep a Changelog^], and this project adheres to https://semver.org/spec/v2.0.0.html[Semantic Versioning^].

== Unreleased

== 0.8.0 - 2022-04-22

=== Added

- Add command to create map images from GPS tracks, waypoints and routes.
- Add command line option to display the version of this gem.

=== Changed

- Rename arguments of `Natour::MapGeoAdmin.save_image`, i.e. `tracks` to `gps_files`, `layers` to `map_layers` and `size` to `image_size`.
+
IMPORTANT: This is a breaking change.
- Improve the error reporting on the command line interface in case of file errors.
- Rework the configuration; the structure and naming follows the command line interface and the keys are of type Ruby Symbol. For details, see the README file.
+
IMPORTANT: This is a breaking change. Adapt the configuration file accordingly.
- Rework the command line interface. Use `natour --help` to get more information.
+
IMPORTANT: This is a breaking change. Adapt the commands accordingly.
- Change `backend` and `draft_backend` arguments of `Natour::convert_report` to symbols.
+
IMPORTANT: This is a breaking change. Adapt the configuration file accordingly.
- Rename `Natour::create` to `Natour::create_reports` and `Natour::convert` to `Natour::convert_report`.
+
IMPORTANT: This is a breaking change.

=== Fixed

- Do not overwrite map images unless otherwise specified.
- Do not abort if the configuration file is empty.

== 0.7.0 - 2022-02-14

=== Added

- Add support for Ruby 3.0 and 3.1.
- Support species lists from https://www.birdlife.ch/de/content/eine-neue-moderne-vogel-app-fuer-die-schweiz[Vogelführer Birdlife Schweiz^].

=== Changed

- Return the filenames from `Natour::create` and `Natour::convert`.

=== Removed

- Drop support for Ruby 2.5.

=== Fixed

- Add revision date to the AsciiDoc output regardless of the author.